tests/parsing/cmc/errors/153.expected
File "tests/parsing/cmc/errors/153.cmc", line 1, character 26-27:
1 | (check-system sys :query ())
                              ^
Error while parsing a system query, read a closing parenthesis,
      but expected a query name.
